--- a/project-1/src/style.css
+++ b/project-1/src/style.css
@@ -21,3 +21,27 @@
   color: #DEEBF8;
   font-weight: 600;
 }
+
+.body {
+  background-color: #282D35;
+  color: white;
+  font-family: Inter;
+  padding: 20px;
+  background-image: url(./images/logo.png);
+  background-repeat: no-repeat;
+  background-position: right 70%;
+}
+
+.body > h1 {
+  margin: 0;
+}
+
+li { 
+  padding: 10px;
+  list-style-type: circle;
+}
+
+li::marker {
+  color: #61DAFB;
+  font-size: 1.4 rem;
+}
